--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
 
 <body>
     <h1>Hello API</h1>
-    <script src="js/main.js"></script>
+    <ul id="users">
+
+    </ul>
+    <button id="load-data">Load Data</button>
+    <button id="load-user">Load User</button>
+    <!-- <script src="js/main.js"></script> -->
+    <script src="js/api.js"></script>
 </body>
 
 </html>
