--- a/post.html
+++ b/post.html
@@ -10,6 +10,8 @@
 
 <body>
     <h1>Display Posts</h1>
+    <section id="post-section"></section>
+    <script src="js/post.js"></script>
 </body>
 
 </html>
